typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNames2_ES6.ts.stderr
error: A 'get' accessor must return a value
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames2_ES6.ts:7:9
  |
7 |     get [accessorName]() { }
  |         ^^^^^^^^^^^^^^

error: A 'get' accessor must return a value
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames2_ES6.ts:9:16
  |
9 |     static get [accessorName]() { }
  |                ^^^^^^^^^^^^^^

